dev/Styles/SquireUI.less
.squire-toolbar {
}

.squire-toolgroup {
	display: inline-block;
	margin: 0 .25em 0 0;
}

.squire-toolgroup > button,
.squire-toolgroup > select,
.squire-toolgroup > input[type="color"] {
	background: transparent;
	border: 0;
	box-shadow: none;
	cursor: pointer;
	font-size: 14px;
	height: 1.5em;
	line-height: 1.7em;
	margin: 0;
	padding: 0;
	vertical-align: bottom;
	width: 2em;
}

.squire-toolgroup button:hover, .squire-toolgroup button.active {
	background: #f0f0f0;
}

.squire-toolgroup select {
	width: 7em;
}
.squire-toolgroup select[data-action="fontSize"] {
	width: 4em;
}

.squire-wysiwyg, .squire-plain {
	min-height: 200px;
	padding: .5em;
}

.squire-plain {
	width: 100%;
}

.squire-plain {
	display: none;
}
.squire-mode-plain .squire-wysiwyg {
	display: none;
}
.squire-mode-plain .squire-plain {
	display: block;
}
.squire-mode-plain .squire-toolgroup:not(#squire-toolgroup-mode) {
	display: none;
}

